--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="colorAccent">#FF5252</color>
     <color name="back">#242424</color>
     <color name="teal">#167577</color>
-    <color name="grey">#575757</color>
+    <color name="grey">#6FB6B6B6</color>
+
 </resources>
