--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,7 +21,7 @@
         android:layout_height="19dp"
         android:layout_marginStart="16dp"
         android:text="@string/username"
-        android:textColor="@color/black"
+        android:textColor="@color/teal"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/profile_button"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,6 +33,7 @@
         android:layout_height="38dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:background="@android:color/transparent"
         android:contentDescription="@string/profile_user"
         android:src="@drawable/ic_baseline_person_24"
@@ -44,6 +45,7 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginEnd="16dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:background="@android:color/transparent"
         android:contentDescription="@string/fav"
         android:src="@drawable/ic_baseline_favorite_24"
@@ -56,8 +58,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="MovieApps"
-        android:textColor="@color/black"
+        android:text="@string/app_name"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +74,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:text="@string/popular"
-        android:textColor="@color/black"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
