Unit Testing and Firebase Crashlytics + Analytics

--- a/app/src/main/res/layout/activity_blur.xml
+++ b/app/src/main/res/layout/activity_blur.xml
@@ -87,6 +87,7 @@
             </LinearLayout>
 
             <Button
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:id="@+id/go_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -94,6 +95,7 @@
                 />
 
             <Button
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:id="@+id/see_file_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -104,5 +106,6 @@
         </LinearLayout>
 
     </LinearLayout>
+
 
 </ScrollView>
